package com.aguabolt.reservas.domain.models;

public enum Rol {
    CLIENTE,
    RECEPCIONISTA,
    ADMIN
}
