@startuml class_diagram_residencial
package "Domain Models" {
    class Habitacion {
        Long id
        String numero
        Double tarifa
        EstadoHabitacion estado
        Integer tiempoXLimpieza
        List<FotoHabitacion> fotos
    }
    class FotoHabitacion {
        Long id
        String rutaLocal
        Boolean esPrincipal
        Habitacion habitacion
    }
    class Reserva {
        Long id
        Usuario cliente
        LocalDateTime horaInicio
        LocalDateTime tiempoLimiteCheckIn
        EstadoReserva estado
    }
    class Usuario {
        Long id
        String email
        String passwordHash
        Rol rol
        Residencial residencial
    }
    class Residencial {
        Long id
        String nombre
        String direccion
        Double latitud
        Double longitud
        Integer tiempoXPredeterminado
        List<Habitacion> habitaciones
    }
    class Rol {
        Long id
        String nombre
    }
}

package "Services" {
    class ReservaService {
        + crearReserva(habitacionId, emailCliente, horaInicio)
        + registrarCheckIn()
        + registrarCheckOut()
        + procesarNoShows()
    }
    class FileStorageService {
        + storeFile(MultipartFile): String
        + loadFileAsResource(String): Resource
    }
    class JwtTokenProvider {
        + generateToken(Authentication): String
        + validateToken(String): Boolean
    }
}

Habitacion "1" *-- "0..*" FotoHabitacion
Usuario "0..*" o-- "1" Rol
Usuario "0..*" --o "1" Residencial : trabaja en
Reserva "0..*" --o "1" Habitacion
Reserva "0..*" --o "1" Usuario : realizada por
Habitacion "0..*" --o "1" Residencial
ReservaService ..> Habitacion
ReservaService ..> Reserva
ReservaService ..> Usuario : busca por email
@enduml
